--- a/templates/index.html
+++ b/templates/index.html
@@ -27,7 +27,7 @@
                 <h2>> Sequence Submission</h2>
                     <form method="post" action='/upload' enctype="multipart/form-data">
                     
-                    <label for="Name">Name your mAb name</label><br>
+                    <label for="Name">Name your mAb</label><br>
                     <textarea id="Name" name="mab_name"></textarea><br>
 
                     <label for="heavy-chain">Heavy chain's variable region sequence</label><br>
