--- a/templates/index.html
+++ b/templates/index.html
@@ -50,7 +50,7 @@
                 <textarea id="heavy-chain" name="heavy_chain" placeholder="QVQLQQSGGELAKPGASVKVSCKASGYTFSSFWMHWVRQAPGQGLEWIGYINPRSGYTEYNEIFRDKATMTTDTSTSTAYMELSSLRSEDTAVYYCASFLGRGAMDYWGQGTTVTVSS"></textarea><br>
                 <label for="light-chain">Light chain's variable region sequence</label><br>
                 <textarea id="light-chain" name="light_chain" placeholder="DIQMTQSPSSLSASVGDRVTITCRASQDISNYLAWYQQKPGKAPKLLIYYTSKIHSGVPSRFSGSGSGTDYTFTISSLQPEDIATYYCQQGNTFPYTFGQGTKVEIK"></textarea><br>
-                <button onclick="copyExample()" class="try-button">CLICK ME TO TRY</button><br>
+                <button onclick="copyExample()" class="try-button">Load an example</button><br>
 
                 <script>
                 function copyExample() {
