--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             </div> 
             <div id="sequence-submission">
                 <h1>> Sequence Submission</h1>
-                
+                <form method="post" action='/upload' enctype="multipart/form-data">
                 
                 <label for="Name">Name your mAb name</label><br>        
                 <textarea id="Name" name="mab_name" placeholder="abituzumab"></textarea><br>
@@ -50,7 +50,7 @@
                 <textarea id="heavy-chain" name="heavy_chain" placeholder="QVQLQQSGGELAKPGASVKVSCKASGYTFSSFWMHWVRQAPGQGLEWIGYINPRSGYTEYNEIFRDKATMTTDTSTSTAYMELSSLRSEDTAVYYCASFLGRGAMDYWGQGTTVTVSS"></textarea><br>
                 <label for="light-chain">Light chain's variable region sequence</label><br>
                 <textarea id="light-chain" name="light_chain" placeholder="DIQMTQSPSSLSASVGDRVTITCRASQDISNYLAWYQQKPGKAPKLLIYYTSKIHSGVPSRFSGSGSGTDYTFTISSLQPEDIATYYCQQGNTFPYTFGQGTKVEIK"></textarea><br>
-                <button onclick="copyExample()" class="try-button">Load an example</button><br>
+                <button onclick="copyExample()" type="button" class="try-button">Load an example</button><br>
 
                 <script>
                 function copyExample() {
@@ -63,9 +63,9 @@
                     document.getElementById("light-chain").value = lightChainExample;
                 }
                 </script>
-                <form method="post" action='/upload' enctype="multipart/form-data"></form>
+
                 <button type="submit" class="submit-button">Submit</button>
-            </form>
+                </form>
 
             </div>
 
