--- a/templates/index.html
+++ b/templates/index.html
@@ -74,8 +74,16 @@
                 
                 {% if csv_path %}
                     <p>Download the result file here: <a href="{{ url_for('download_file', filename='DeepSP_descriptors.csv')}}">{{ csv_path }}</a></p>
-                    <p>Or view the result here:</p>
-                    <iframe src="{{ url_for('view_csv') }}" width="100%" height="400" frameborder="0"></iframe>
+                    <p>CSV file content:</p>
+                    <table>
+                        {% for row in csv_data %}
+                            <tr>
+                                {% for item in row %}
+                                    <td>{{ item }}</td>
+                                {% endfor %}
+                            </tr>
+                        {% endfor %}
+                    </table>
                 {% else %}
                     <p>No results available.</p>
                 {% endif %}
