--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@
                 {% if csv_path %}
                     <p>Download the result file here: <a href="{{ url_for('download_file', filename='DeepSP_descriptors.csv')}}">{{ csv_path }}</a></p>
                     <p>Result:</p>
-                    <div style="overflow-x: auto; max-height: 400px;"></div>
+                    <div style="overflow-x: auto; max-height: 400px;">
                         <table>
                             {% for row in csv_data %}
                                 <tr>
