--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,11 @@
                 <form method="post" action='/upload' enctype="multipart/form-data">
                 
                 <label for="Name">Name your mAb name</label><br>        
-                <textarea id="Name" name="mab_name" placeholder="abituzumab"></textarea><br>
+                <textarea id="Name" name="mab_name" placeholder="Your mAb's name"></textarea><br>
                 <label for="heavy-chain">Heavy chain's variable region sequence</label><br>
-                <textarea id="heavy-chain" name="heavy_chain" placeholder="QVQLQQSGGELAKPGASVKVSCKASGYTFSSFWMHWVRQAPGQGLEWIGYINPRSGYTEYNEIFRDKATMTTDTSTSTAYMELSSLRSEDTAVYYCASFLGRGAMDYWGQGTTVTVSS"></textarea><br>
+                <textarea id="heavy-chain" name="heavy_chain" placeholder="QVQLQQ..."></textarea><br>
                 <label for="light-chain">Light chain's variable region sequence</label><br>
-                <textarea id="light-chain" name="light_chain" placeholder="DIQMTQSPSSLSASVGDRVTITCRASQDISNYLAWYQQKPGKAPKLLIYYTSKIHSGVPSRFSGSGSGTDYTFTISSLQPEDIATYYCQQGNTFPYTFGQGTKVEIK"></textarea><br>
+                <textarea id="light-chain" name="light_chain" placeholder="DIQMTQ..."></textarea><br>
                 <button onclick="copyExample()" type="button" class="try-button">Load an example</button><br>
 
                 <script>
