--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,7 @@
                 <h3>How to Use DeepSP:</h3>
                 <ol>
                     <li>Enter the name of your antibody in the first text box.</li>
-                    <li>Enter the heavy chain variable region sequence in the third text box. </li>
+                    <li>Enter the heavy chain variable region sequence in the second text box. </li>
                     <li>Enter the light chain variable region sequence in the third text box. </li>
                     <li>Click the "Submit" button to generate thirty (30) DeepSP descriptors. </li>
                 </ol>
