--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,7 @@
                     <li>Click the "Submit" button to generate thirty (30) DeepSP descriptors. </li>
                 </ol>
                 <h3>Note: To process large datasets at once, please refer to our <a href="https://github.com/Lailabcode/DeepSP" target="_blank">GitHub</a>.</h3>
-                <h3>Citation: <a href="https://www.biorxiv.org/content/10.1101/2024.02.28.582582v1" target="_blank">DeepSP's manuscript</a> is currently under peer review and is temporarily available on bioRxiv for reference. </h3>
+                <h3>Citation: Kalejaye, L.; Wu, I.-E.; Terry, T.; Lai, P.-K. DeepSP: Deep Learning-Based Spatial Properties to Predict Monoclonal Antibody Stability.<i>Comput. Struct. Biotechnol. J.</i>2024, 23, 2220-2229(<a href="https://doi.org/10.1016/j.csbj.2024.05.029" target="_blank">https://doi.org/10.1016/j.csbj.2024.05.029</a>)</h3>
             </div> 
             <div id="sequence-submission">
                 <h1>> Sequence Submission</h1>
